--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ritech-Android</string>
+    <string name="error_fetch_advice">Something went wrong. Please try again.</string>
 </resources>
